; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_udf.c_grub_udf_dir.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_udf.c_grub_udf_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.grub_dirhook_info = type opaque
%struct.grub_udf_data = type { i32 }
%struct.grub_fshelp_node = type { i32 }
%struct.grub_udf_dir_closure = type { i32 (i8*, %struct.grub_dirhook_info.0*, i8*)*, i8* }
%struct.grub_dirhook_info.0 = type opaque

@my_mod = common dso_local global i32 0, align 4
@GRUB_FSHELP_DIR = common dso_local global i32 0, align 4
@iterate = common dso_local global i32 0, align 4
@grub_errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i32 (i8*, %struct.grub_dirhook_info*, i8*)*, i8*)* @grub_udf_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_udf_dir(%struct.TYPE_3__* %0, i8* %1, i32 (i8*, %struct.grub_dirhook_info*, i8*)* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32 (i8*, %struct.grub_dirhook_info*, i8*)*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.grub_udf_data*, align 8
  %10 = alloca %struct.grub_fshelp_node, align 4
  %11 = alloca %struct.grub_fshelp_node*, align 8
  %12 = alloca %struct.grub_udf_dir_closure, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 (i8*, %struct.grub_dirhook_info*, i8*)* %2, i32 (i8*, %struct.grub_dirhook_info*, i8*)** %7, align 8
  store i8* %3, i8** %8, align 8
  store %struct.grub_udf_data* null, %struct.grub_udf_data** %9, align 8
  %13 = load i32, i32* @my_mod, align 4
  %14 = call i32 @grub_dl_ref(i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call %struct.grub_udf_data* @grub_udf_mount(i32 %17)
  store %struct.grub_udf_data* %18, %struct.grub_udf_data** %9, align 8
  %19 = load %struct.grub_udf_data*, %struct.grub_udf_data** %9, align 8
  %20 = icmp ne %struct.grub_udf_data* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %4
  br label %59

22:                                               ; preds = %4
  %23 = load %struct.grub_udf_data*, %struct.grub_udf_data** %9, align 8
  %24 = load %struct.grub_udf_data*, %struct.grub_udf_data** %9, align 8
  %25 = getelementptr inbounds %struct.grub_udf_data, %struct.grub_udf_data* %24, i32 0, i32 0
  %26 = bitcast %struct.grub_fshelp_node* %10 to %struct.grub_udf_data*
  %27 = call i64 @grub_udf_read_icb(%struct.grub_udf_data* %23, i32* %25, %struct.grub_udf_data* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %22
  br label %59

30:                                               ; preds = %22
  %31 = load i8*, i8** %6, align 8
  %32 = bitcast %struct.grub_fshelp_node* %10 to %struct.grub_udf_data*
  %33 = bitcast %struct.grub_fshelp_node** %11 to %struct.grub_udf_data**
  %34 = load i32, i32* @GRUB_FSHELP_DIR, align 4
  %35 = call i64 @grub_fshelp_find_file(i8* %31, %struct.grub_udf_data* %32, %struct.grub_udf_data** %33, i32 (%struct.grub_udf_data*, i32, %struct.grub_udf_dir_closure*)* @grub_udf_iterate_dir, i32 0, i32 0, i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %30
  br label %59

38:                                               ; preds = %30
  %39 = load i32 (i8*, %struct.grub_dirhook_info*, i8*)*, i32 (i8*, %struct.grub_dirhook_info*, i8*)** %7, align 8
  %40 = icmp ne i32 (i8*, %struct.grub_dirhook_info*, i8*)* %39, null
  br i1 %40, label %41, label %51

41:                                               ; preds = %38
  %42 = load i32 (i8*, %struct.grub_dirhook_info*, i8*)*, i32 (i8*, %struct.grub_dirhook_info*, i8*)** %7, align 8
  %43 = bitcast i32 (i8*, %struct.grub_dirhook_info*, i8*)* %42 to i32 (i8*, %struct.grub_dirhook_info.0*, i8*)*
  %44 = getelementptr inbounds %struct.grub_udf_dir_closure, %struct.grub_udf_dir_closure* %12, i32 0, i32 0
  store i32 (i8*, %struct.grub_dirhook_info.0*, i8*)* %43, i32 (i8*, %struct.grub_dirhook_info.0*, i8*)** %44, align 8
  %45 = load i8*, i8** %8, align 8
  %46 = getelementptr inbounds %struct.grub_udf_dir_closure, %struct.grub_udf_dir_closure* %12, i32 0, i32 1
  store i8* %45, i8** %46, align 8
  %47 = load %struct.grub_fshelp_node*, %struct.grub_fshelp_node** %11, align 8
  %48 = bitcast %struct.grub_fshelp_node* %47 to %struct.grub_udf_data*
  %49 = load i32, i32* @iterate, align 4
  %50 = call i32 @grub_udf_iterate_dir(%struct.grub_udf_data* %48, i32 %49, %struct.grub_udf_dir_closure* %12)
  br label %51

51:                                               ; preds = %41, %38
  %52 = load %struct.grub_fshelp_node*, %struct.grub_fshelp_node** %11, align 8
  %53 = icmp ne %struct.grub_fshelp_node* %52, %10
  br i1 %53, label %54, label %58

54:                                               ; preds = %51
  %55 = load %struct.grub_fshelp_node*, %struct.grub_fshelp_node** %11, align 8
  %56 = bitcast %struct.grub_fshelp_node* %55 to %struct.grub_udf_data*
  %57 = call i32 @grub_free(%struct.grub_udf_data* %56)
  br label %58

58:                                               ; preds = %54, %51
  br label %59

59:                                               ; preds = %58, %37, %29, %21
  %60 = load %struct.grub_udf_data*, %struct.grub_udf_data** %9, align 8
  %61 = call i32 @grub_free(%struct.grub_udf_data* %60)
  %62 = load i32, i32* @my_mod, align 4
  %63 = call i32 @grub_dl_unref(i32 %62)
  %64 = load i32, i32* @grub_errno, align 4
  ret i32 %64
}

declare dso_local i32 @grub_dl_ref(i32) #1

declare dso_local %struct.grub_udf_data* @grub_udf_mount(i32) #1

declare dso_local i64 @grub_udf_read_icb(%struct.grub_udf_data*, i32*, %struct.grub_udf_data*) #1

declare dso_local i64 @grub_fshelp_find_file(i8*, %struct.grub_udf_data*, %struct.grub_udf_data**, i32 (%struct.grub_udf_data*, i32, %struct.grub_udf_dir_closure*)*, i32, i32, i32) #1

declare dso_local i32 @grub_udf_iterate_dir(%struct.grub_udf_data*, i32, %struct.grub_udf_dir_closure*) #1

declare dso_local i32 @grub_free(%struct.grub_udf_data*) #1

declare dso_local i32 @grub_dl_unref(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
